# compiler-experiment

./: CMakeLists.txt  README.md
include/: config.h  exceptions.h  expressions.h  grammar.h  lexer.h  parser.h  tokenizer.h
source/: grammar.cpp  lexer.cpp  parser.cpp  tokenizer.cpp
tests/: test_blocks.cpp  test_expressions.cpp  test_lexer.cpp  test_statements.cpp
